runable getUserIdBasedMatrix